platform/configs/gateway-infra/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: "38.102.124.212"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: cabotcupbook-cert
            kind: Secret
          - name: cabotcup-cert
            kind: Secret
          - name: cabotcup-test-cert
            kind: Secret
          - name: masters-pool-cert
            kind: Secret
